# platform_control_project

./: .gitignore  README.md
lidar_guard_ws/: .gitignore
lidar_guard_ws/install/: local_setup.sh  setup.sh
lidar_guard_ws/install/lidar_guard/lib/lidar_guard/: fake_scan_node  guard_node  gui_node
lidar_guard_ws/log/: latest_build
lidar_guard_ws/src/lidar_guard/: README.md  package.xml  setup.py
lidar_guard_ws/src/lidar_guard/config/: lidar.yaml
lidar_guard_ws/src/lidar_guard/launch/: bringup.launch.py  guard_demo.launch.py  guard_gui_demo.launch.py
lidar_guard_ws/src/lidar_guard/lidar_guard/: detector.py  fake_scan_node.py  guard_node.py  gui_node.py
lidar_guard_ws/src/lidar_guard/tests/: test_detector.py
lidar_guard_ws/src/lidar_guard/tools/: scan_to_udp.py
lidar_guard_ws/src/lidar_guard/ui/: bridge_pts_to_laserscan.py  graphics.py  lidar_to_udp.py  lidar_udp_rx.py  lidar_upd_rx.py  main_runtime.py  main_window.ui  make_random_maps.py  maps_panel.py  page_drive.py  page_idle.py  page_maps.py  radar_heatmap.py  routing.py  state.py  status.py  widgets.py
lidar_guard_ws/src/lidar_guard/ui/maps_repo/: rand_map_001.json  rand_map_002.json  rand_map_003.json  rand_map_004.json  rand_map_005.json
lidar_guard_ws/src/lidar_guard/ui/qt5_env/: pyvenv.cfg
lidar_guard_ws/src/scan_udp_bridge/: CMakeLists.txt  package.xml  setup.cfg  setup.py
lidar_guard_ws/src/scan_udp_bridge/launch/: bringup_scan_udp.launch.py
lidar_guard_ws/src/scan_udp_bridge/scan_udp_bridge/: scan_to_udp.py  udp_bridge.py
maps_repo/: make_test_map.py  test_map.json
ros2_ws/: .gitignore
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
ros2_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/lidar_guard/: package.xml  setup.cfg  setup.py  ui
ros2_ws/src/lidar_guard/config/: sllidar_params.yaml
ros2_ws/src/lidar_guard/launch/: bringup.launch.py
ros2_ws/src/lidar_guard/resource/: lidar_guard
ros2_ws/src/log/: latest_build
ros2_ws/src/tools/: scan_to_udp.py
(+69 files in other folders)
