<?xml version="1.0"?>
<package format="3">
  <name>lidar_guard</name>
  <version>0.1.0</version>
  <description>Safety guard for lidar with STOP output.</description>
  <maintainer email="andrei@example.com">Andrei</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <test_depend>pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
