<?xml version="1.0"?>
<package format="3">
  <name>scan_udp_bridge</name>
  <version>0.0.1</version>
  <description>ROS2 /scan → UDP bridge and UDP converters</description>
  <maintainer email="andrei@example.com">Andrei</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
