<?xml version="1.0"?>
<package format="3">
  <name>lidar_guard</name>
  <version>0.0.1</version>
  <description>Unified bringup: sllidar_ros2 + GUI</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <exec_depend>sllidar_ros2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
